--- a/HTML/formSignLog.html
+++ b/HTML/formSignLog.html
@@ -56,7 +56,7 @@ Login - Register - ForgotPass Table -->
                                     data-bs-parent="#accordionParent">
                                     <div class="accordion-body">
                                         <ul class="list-unstyled">
-                                            <li><a href="../HTML/index.html" id="mainPage" onclick="sessionData()">Trang chủ</a></li>
+                                            <li><a href="../HTML/index.html" id="mainPage" >Trang chủ</a></li>
                                             <li><a href="https://fptshop.com.vn/gioi-thieu">Thông tin doanh nghiệp</a></li>
                                             <li><a href="#" onclick="contactF()" class="contact-header">Liên hệ</a></li>
                                             <li><a href="#" class="service-header">Dịch Vụ</a></li>
@@ -77,7 +77,7 @@ Login - Register - ForgotPass Table -->
                                     <div class="accordion-body">
                                         <ul class="list-unstyled">
                                             <li><a href="#">Cài đặt thông tin</a></li>
-                                            <li><a href="../HTML/formSignLog.html" onclick="sessionData()">Đăng nhập</a>
+                                            <li><a href="../HTML/formSignLog.html" >Đăng nhập</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -228,7 +228,7 @@ Login - Register - ForgotPass Table -->
                     <a href="../HTML/cart-form.html" class="text-white">
                         <i class="ti-shopping-cart">
                             <p class="product-mount">
-                                <script>document.write(sessionStorage.getItem('pr-mount'))</script>
+                                <script>document.write(sessionStorage.getItem('pr-mount')==null?0:sessionStorage.getItem('pr-mount'))</script>
                             </p>
                         </i>
                     </a>
@@ -240,7 +240,7 @@ Login - Register - ForgotPass Table -->
                     <i class="ti-announcement"></i>
                     <h4>Doanh nghiệp</h4>
                     <ul class="list-unstyled drop-list-item navigation">
-                        <li><a href="../HTML/index.html" id="mainPage" onclick="sessionData()">Trang chủ</a></li>
+                        <li><a href="../HTML/index.html" id="mainPage" >Trang chủ</a></li>
                         <li><a href="https://fptshop.com.vn/gioi-thieu">Thông tin doanh nghiệp</a></li>
                         <li><a href="#" onclick="contactF()" class="contact-header">Liên hệ</a></li>
                         <li><a href="#" class="service-header">Dịch Vụ</a></li>
@@ -251,14 +251,14 @@ Login - Register - ForgotPass Table -->
                     <h4>Thanh toán</h4>
                 </div>
                 <div class="cus-shopping-cart">
-                    <a href="../HTML/cart-form.html" onclick="sessionData()" class="text-white">
+                    <a href="../HTML/cart-form.html"  class="text-white">
                         <i class="ti-shopping-cart">
-                            <p class="product-mount">0</p>
+                            <p class="product-mount"><script>document.write(sessionStorage.getItem('pr-mount')==null?0:sessionStorage.getItem('pr-mount'))</script></p>
                         </i>
                     </a>
                     <ul class="drop-list-item list-unstyled">
                         <li><a href="#">Đã mua</a></li>
-                        <li><a href="../HTML/cart-form.html" onclick="sessionData()">Hàng chờ</a></li>
+                        <li><a href="../HTML/cart-form.html" >Hàng chờ</a></li>
                     </ul>
                     <h4>Giỏ hàng</h4>
                 </div>
@@ -271,7 +271,7 @@ Login - Register - ForgotPass Table -->
                                     style="font-size: 18px;margin-top: 0px;"></i>&nbsp;&nbsp;&nbsp;Cài đặt thông tin</a>
                         </li>
                         <li><a href="../HTML/formSignLog.html"><i class="fa fa-sign-in"
-                                    style="font-size: 18px;margin-top: 0px;" onclick="sessionData()"></i>&nbsp;&nbsp;&nbsp;Đăng nhập</a></li>
+                                    style="font-size: 18px;margin-top: 0px;" ></i>&nbsp;&nbsp;&nbsp;Đăng nhập</a></li>
                     </ul>
                 </div>
             </div>
@@ -449,11 +449,11 @@ Login - Register - ForgotPass Table -->
                             <div class="top-selling">
                                 <h4 class="text-left">Bán chạy nhất</h4>
                                 <div class="img-top-sell">
-                                    <a href="../HTML/detailsProduct.html" onclick="sessionData()"><img
+                                    <a href="../HTML/detailsProduct.html" ><img
                                             src="../Assets/images/header/iphone14-pro-best-selling.jpg" alt=""></a>
                                 </div>
                                 <div class="descript-top-sell">
-                                    <a href="../HTML/detailsProduct.html" onclick="sessionData()">iPhone 14 Pro Max
+                                    <a href="../HTML/detailsProduct.html" >iPhone 14 Pro Max
                                         128GB</a>
                                     <p>27.190.000 <span style="text-decoration: underline;">đ</span></p>
                                 </div>
